# Behavioral_digital_twin

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  REPORT.md  docker-compose.yml  profile_retrain2.py  pyproject.toml  render.yaml  requirements.txt  seed_db.py
api/: __init__.py  chat.py  drift.py  health.py  main.py  response_adapters.py  schemas.py  service.py
data/: __init__.py  decision_store.py  schema.py
features/: __init__.py  encoders.py  feature_pipeline.py  history.py  temporal.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  OAuthMockPage.tsx  (+3 more)
mlops/: __init__.py  drift_monitor.py  logging_config.py  metrics.py  prediction_log.py  q1_experiments.py  registry.py  retrain_trigger.py  rollback.py  tracking.py
models/: __init__.py  base.py  baseline.py  evaluate.py  markov.py  sequence.py
personalization/: __init__.py  profile_store.py  updater.py
tests/: __init__.py  conftest.py  synthetic_data_generator.py  test_api_integration.py  test_baseline_save_load.py  test_drift_soundness.py  test_encoders.py  test_exact_shape_endpoints.py  test_generator_determinism.py  test_generator_schema_validity.py  test_model_comparison.py  test_no_future_leakage.py  test_personalization_drift_integration.py  test_probability_validity.py  test_profile_monotonicity.py  test_profile_store.py  test_response_shape_conformance.py  test_schema.py  test_schema_validation.py  test_sequence_save_load.py  test_store_roundtrip.py  test_store_temporal_ordering.py  test_temporal_split_integrity.py
(+27 files in other folders)
